CHANGES

  - drop official support for node 4
  - format resource names before they are used in acl to remove invalid chars
  - upgrade body-parser to 1.17.2 from 1.17.1
  - upgrade ejs to 2.5.7 from 2.5.6
  - upgrade express to 4.15.4 from 4.15.2
  - upgrade fs-extra to 3.0.1 from 2.0.0
  - upgrade grunt-contrib-clean to 1.1.0 from 1.0.0
  - upgrade grunt-contrib-cssmin to 2.2.1 from 2.0.0
  - upgrade grunt-contrib-qunit to 2.0.0 from 1.3.0
  - upgrade grunt-contrib-uglify to 3.0.1 from 2.2.0
  - upgrade grunt-eslint to 20.0.0 from 19.0.0
  - upgrade grunt-jasmine-node-coverage to 1.2.0 from 1.1.1
  - upgrade grunt-newer to 1.3.0 from 1.2.0
  - upgrade helmet to 3.8.1 from 3.4.1
  - upgrade moment to 2.18.1 from 2.17.1
  - upgrade mongodb to 2.2.31 from 2.2.22
  - upgrade pem to 1.9.7 from 1.9.4
  - upgrade tmp to 0.0.33 from 0.0.31

release 0.4.0
  - add admin pages and endpoints
  - add acl as dep
  - add grunt-jsdoc@2.1.0 as dep
  - jsdocs added
  - all changes to token stored in single array of updates
  - token records include information about owner and op user

release 0.3.0
  - upgrade body-parser to 1.17.1 from 1.17.0
  - upgrade express to 4.15.2 from 4.15.0
  - move perl script to generate db to github
  - ssl defaults to on
  - new option --sslca
  - clients must present a valid certificate, signed by passed CA
  - add pem as dev dep
  - more debug level logging messages
  - use random db port for tests
  - format for npm deployment
  - split controller setup into module
  - renaming app.js to npg_sentry.js
  - adding linting and tests