@@ -18,12 +18,6 @@
 const assert      = require('assert');
 
 /**
- * @external crypto
- * @see {@link https://nodejs.org/docs/latest-v6.x/api/crypto.html|crypto}
- */
-const randomBytes = require('crypto').randomBytes;
-
-/**
  * @external moment
  * @see {@link https://momentjs.com/docs/|moment}
  */
@@ -35,10 +29,11 @@ const moment      = require('moment');
  */
 const MongoClient = require('mongodb').MongoClient;
 
-const constants = require('./constants.js');
-const config    = require('./config.js');
-const dbConn    = require('./db_conn.js');
-const logger    = require('./logger.js');
+const constants  = require('./constants.js');
+const config     = require('./config.js');
+const dbConn     = require('./db_conn.js');
+const logger     = require('./logger.js');
+const tokenUtils = require('./token_utils');
 
 const UNEXPECTED_NUM_DOCS  = constants.UNEXPECTED_NUM_DOCS;
 const USER_NOT_TOKEN_OWNER = constants.USER_NOT_TOKEN_OWNER;
@@ -132,33 +127,6 @@ p_collection.catch(function(reason) {
   throw reason;
 });
 
-/**
- * Generates a new 32 character, base64 string.
- *
- * @return Promise
- */
-function generateTokenPromise() {
-  return new Promise(function(resolve, reject) {
-    // TODO refactor to prevent collisions with tokens in db
-    // 24 bytes will generate a 32 character base64 string
-    logger.debug('Generating new token');
-    randomBytes(24, function(err, buf) {
-      if (err) {
-        reject(err);
-      }
-      // http://stackoverflow.com/questions/8838624/node-js-send-email-on-
-      // registration/8842959#8842959
-      resolve(buf.toString('base64').replace(/\//g, '_').replace(/\+/g, '-'));
-    });
-  });
-}
-
-/**
- * Finds all matching tokens in {@link p_collection}. May return zero or
- * multiple matches.
- * @param {String} token - token string to find.
- * @return Promise
- */
 function findMatchingTokens(token) {
   return p_collection.then(function(collection) {
     logger.debug('Searching database for token: ' + token);
@@ -170,14 +138,36 @@ function findMatchingTokens(token) {
 }
 
 /**
- * Returns a function which will find the next document in the cursor.
- * Should be called as a parameter to a promise chain.
- * @example cursorHasExactlyOneDoc(p_cursor)
- *   .then(getDocument(p_cursor))
- *   .then(function(doc) {...
- * @param {Promise} p_cursor - promise which takes value of a mongodb.Cursor
- *   when fulfilled
- * @return Function
+ * Generates a new 32 character, base64 string.
+ *
+ * @return Promise
+ */
+function generateTokenPromise() {
+  // TODO refactor to prevent collisions with tokens in db
+  let tokenStringPromise = tokenUtils.generateTokenStringPromise().then((token) => {
+    let uniqueTokenPromise = p_collection.then((collection) => {
+      return collection.find({token: token}).count();
+    }, err => {
+      return err;
+    }).then((count) => {
+      return count === 0 ? Promise.resolve(token) :
+                           Promise.reject('Duplicated token');
+    }, err => {
+      return Promise.reject(err);
+    });
+    return uniqueTokenPromise;
+  }, err => {
+    return err;
+  });
+
+  return tokenStringPromise;
+}
+
+/**
+ * Finds all matching tokens in {@link p_collection}. May return zero or
+ * multiple matches.
+ * @param {String} token - token string to find.
+ * @return Promise
  */
 function getDocument(p_cursor) {
   return function() {
@@ -189,12 +179,14 @@ function getDocument(p_cursor) {
 }
 
 /**
- * Checks that a cursor only contains one result. Returned promise rejects if
- * there was no results or more than one.
- *
- * @param {Promise} p_cursor - takes value of a mongodb.Cursor when fulfilled.
- * @return {Promise} Fulfills if only one token exists in the db, otherwise
- *   rejects with a {@link DbError}.
+ * Returns a function which will find the next document in the cursor.
+ * Should be called as a parameter to a promise chain.
+ * @example cursorHasExactlyOneDoc(p_cursor)
+ *   .then(getDocument(p_cursor))
+ *   .then(function(doc) {...
+ * @param {Promise} p_cursor - promise which takes value of a mongodb.Cursor
+ *   when fulfilled
+ * @return Function
  */
 function cursorHasExactlyOneDoc(p_cursor) {
   return p_cursor.then(function(cursor) {
@@ -239,6 +231,8 @@ function _buildToken(token, tokenOwner, user, justification) {
   };
 }
 
+let _duplicatedRegex = /duplicated/i;
+
 /**
  * Creates a token, inserts it into the database.
  * @alias module:lib/model.createToken
@@ -268,9 +262,12 @@ let createToken = (tokenOwner, user, justification) => {
           return Promise.resolve(doc);
         });
     });
-  })
-  .catch(function(reason) {
-    logger.error(reason);
+  }, function(reason) {
+    if (_duplicatedRegex.test(reason.toString())) {
+      logger.warn(`Token already existed in db while generating new token for ${user}`);
+    } else {
+      logger.error(reason);
+    }
     return Promise.reject(reason);
   });
 };
